--- a/src/components/SearchBar/SearchBar.module.css
+++ b/src/components/SearchBar/SearchBar.module.css
@@ -1,10 +1,30 @@
 .searchbar {
-    display: block;
-    margin: 0 auto;
-    padding: 0 1rem 0 1rem;
-    width: 800px;
-    height: 50px;
-    border: 2px solid #000;
-    border-radius: 25px;
-    font-size: 1.5rem;
+    position: relative;
+    margin-top: 20px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 0 20px 0 20px;
+    width: 50%;
+    height: 60px;
+    background-color: #fff;
+    border-radius: 30px;
+}
+
+.searchbar input {
+    height: 100%;
+    width: 85%;
+    border: none;
+    padding: 0;
+    border-radius: 30px 0 0 30px;
+}
+
+.searchbar button {
+    height: 100%;
+    width: 15%;
+    border: none;
+    padding: 0;
+    border-radius: 0px 30px 30px 0 ;
+    background-color: #bc2cff;
+    color: #fff;
 }
